
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int rand () ;

void corruptor(char *buf, int len)
{
int cb, i, l;

 cb = rand()%15+1;

 for (i=0; i < cb; i++)
 {
  l = rand()%len;
  buf[l] = rand()%256;
 }
}
